# simple-thread-pool

./: CMakeLists.txt  LICENSE  README.md  SPConfig.hpp.in  main.cpp
Example/: VectorAverage.hpp
FunctionCall/: SPFunctionCall.hpp
Job/: SPJob.cpp  SPJob.hpp
ThreadPool/: SPThreadPool.cpp  SPThreadPool.hpp
ThreadReport/: SPThreadReport.cpp  SPThreadReport.hpp
